--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
             
     <div class="map-container" style="margin: 2rem 0; width: 100%; height: 350px; border: 2px solid #000000; border-radius: 0;">
       <iframe 
-        src="https://maps.google.com/maps?q=Perth%20Tax%20Professionals%20Perth%2C%20WA&t=&z=15&ie=UTF8&iwloc=&output=embed" 
+        src="https://www.google.com/maps?cid=11205783869156922745" 
         width="100%" 
         height="100%" 
         style="border:0;" 
